# readur

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  SUBDIRECTORY_BUG_FIX.md  TESTING.md  apply_migrations.sh  create_multilingual_test_pdfs.py  create_test_pdfs.py  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  final_documents_tests_fix.py  fix_models_user.py  fix_testuser_vs_user_final.py  fix_user_vs_testuser.py  grafana-dashboard.json  migrate_documents_tests.py  migrate_documents_tests_v2.py  migrate_documents_tests_v3.py  migrate_tests.py  migrate_tests_fix.py  nginx.conf  pr_description.md  precise_testuser_fix.py  renovate.json  run-tests.sh  run_all_tests.sh  run_integration_tests.sh  run_label_tests.sh  run_tests.sh  test.sh  test_bulk_delete.rs  test_watch_folder.sh  view-test-results.sh
.cargo/: config.toml
.claude/: settings.local.json
.woodpecker/: build-and-push.yml
docs/: DATABASE_GUARDRAILS.md  OCR_OPTIMIZATION_GUIDE.md  REVERSE_PROXY.md  TESTING.md  WATCH_FOLDER.md  advanced-search.md  analytics-dashboard-guide.md  api-reference.md  configuration.md  deployment.md  file-upload-guide.md  health-monitoring-guide.md  installation.md  labels-and-organization.md  multi-language-ocr-guide.md  notifications-guide.md  oidc-setup.md  sources-guide.md  swagger-ui-guide.md  user-guide.md  user-management-guide.md
docs/dev/: README.md  (+8 more)
frontend/: TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
migrations/: 001_add_ocr_queue.sql  002_add_enhanced_ocr_fields.sql  009_notifications.sql  20240101000000_initial_schema.sql  20240101000001_add_ocr_queue.sql  20240101000005_create_ocr_analytics_view.sql  20240101000006_add_missing_ocr_columns.sql  20240101000008_add_webdav_fields.sql  20240101000010_notifications.sql  20240101000012_add_enhanced_ocr_settings.sql  20240617000001_add_ocr_failure_reason.sql  20240620000001_add_labels_system.sql  20241222000001_fix_completed_today_count.sql  20250118000000_add_labels_system.sql  20250620100000_initial_schema.sql  20250620100001_add_ocr_queue.sql  20250620100003_add_ocr_queue_function.sql  20250620100004_update_settings_defaults.sql  20250620100007_fix_ocr_queue_stats_types.sql  20250620100009_add_user_roles.sql  20250620100011_add_sources_table.sql  20250620100013_add_database_guardrails.sql  20250620100014_update_file_paths_to_structured_dirs.sql  20250620100016_add_file_hash_field.sql  20250620100018_add_assigned_by_to_document_labels.sql  20250620100020_normalize_existing_etags.sql  20250624000001_add_ignored_files_table.sql  20250626000001_add_oidc_user_mapping.sql  20250628000001_backfill_ocr_confidence.sql  20250628000002_populate_ocr_queue_from_pending.sql  20250628000003_add_failed_documents_table.sql  20250628000004_migrate_failed_ocr_to_failed_documents.sql  20250630104504_add_document_metadata_fields.sql  20250701000000_add_webdav_directories.sql  20250701000001_add_ocr_retry_history.sql  20250702000001_add_ocr_retry_fields.sql  20250702000002_fix_ocr_retry_guardrails.sql  20250703000001_add_scan_progress_tracking.sql  20250703000002_add_source_validation_fields.sql  20250708000001_fix_ocr_queue_stats_function.sql  (+6 more)
scripts/: run-e2e-local.sh
src/: auth.rs  batch_ingest.rs  config.rs  db.rs  db_guardrails.rs  db_guardrails_simple.rs  db_monitoring.rs  document_ingestion.rs  enhanced_ocr.rs  file_service.rs  lib.rs  local_folder_service.rs  main.rs  metadata_extraction.rs  migrations.rs  mime_detection.rs  models.rs  ocr.rs  ocr_api.rs  ocr_enhanced.rs  ocr_error.rs  ocr_health.rs  ocr_queue.rs  ocr_tests.rs  oidc.rs  s3_service.rs  s3_service_stub.rs  seed.rs  source_scheduler.rs  source_sync.rs  swagger.rs  test_utils.rs  watcher.rs  webdav_scheduler.rs  webdav_service.rs  webdav_xml_parser.rs
test_data/: create_test_images.py  test_image.txt
test_files/: ascii_only.txt  comprehensive_text.txt  create_metadata_test_files.py  create_test_image.rs  large_text.txt  sample.html  sample.json  sample.txt  sample.xml  test_format.html  test_format.json  test_format.xml
tests/: admin_functionality_tests.rs  auto_resume_tests.rs  basic_sync_tests.rs  cancellation_tests.rs  comprehensive_migration_tests.rs  comprehensive_source_management_tests.rs  database_schema_inspection_test.rs  debug_ocr_test.rs  debug_pipeline_test.rs  document_deletion_integration_tests.rs  document_upload_hash_duplicate_tests.rs  e2e_ocr_test.sh  error_handling_edge_cases_tests.rs  failed_ocr_endpoints_tests.rs  file_processing_pipeline_tests.rs  hash_duplicate_detection_tests.rs  helpers.rs  ignored_files_integration_tests.rs  integration_admin_functionality_tests.rs  integration_auth_tests.rs  integration_auto_resume_tests.rs  integration_cancellation_tests.rs  integration_comprehensive_source_management_tests.rs  integration_config_oidc_tests.rs  integration_db_tests.rs  integration_debug_ocr_test.rs  integration_document_deletion_integration_tests.rs  integration_document_routes_tests.rs  integration_document_upload_hash_duplicate_tests.rs  integration_documents_database_tests.rs  integration_enhanced_ocr_tests.rs  integration_enhanced_search_tests.rs  integration_failed_documents_tests.rs  integration_failed_ocr_endpoints_tests.rs  integration_file_processing_pipeline_tests.rs  integration_file_service_tests.rs  integration_generic_migration_tests.rs  (+110 more)
(+361 files in other folders)
