[package]
name = "readur"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "readur"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"] }
regex = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
base64ct = "=1.6.0"
jsonwebtoken = "9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
futures = "0.3"
notify = "6"
mime_guess = "2"
tesseract = { version = "0.15", optional = true }
pdf-extract = { version = "0.7", optional = true }
image = { version = "0.24", features = ["png", "jpeg", "tiff", "bmp"], optional = true }
imageproc = { version = "0.23", optional = true }
thiserror = "1.0"
sysinfo = "0.30"
raw-cpuid = { version = "11", optional = true }
reqwest = { version = "0.11", features = ["json", "multipart"] }
quick-xml = { version = "0.31", features = ["serialize"] }
urlencoding = "2.1"
dotenvy = "0.15"
hostname = "0.4"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[features]
default = ["ocr"]
ocr = ["tesseract", "pdf-extract", "image", "imageproc", "raw-cpuid"]

[dev-dependencies]
tempfile = "3"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }